Migrate source files to TypeScript and update build pipeline
Convert background.js and scripts/twitch.js to TypeScript with proper
type annotations. Update build.js to compile TypeScript via tsc before
copying assets. Add typescript and @types/chrome dev dependencies.

--- a/package.json
+++ b/package.json
@@ -8,5 +8,9 @@
         "build:chrome": "node build.js chrome",
         "build:firefox": "node build.js firefox",
         "watch": "node build.js watch"
+    },
+    "devDependencies": {
+        "@types/chrome": "^0.1.36",
+        "typescript": "^5.9.3"
     }
 }
