Add packaging script to produce distributable archives
Add a `package` command to build.js that creates zip/xpi archives
for browser store submission (Chrome .zip, Firefox .zip + .xpi).
Output goes to dist/ using the version from package.json.
Also gitignore dist/ and .claude/settings.local.json.

--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
     "description": "Twitch Improvement browser extension",
     "scripts": {
         "build": "node build.js",
-        "build:chrome": "node build.js chrome",
-        "build:firefox": "node build.js firefox",
-        "watch": "node build.js watch"
+        "watch": "node build.js watch",
+        "package": "node build.js package"
     },
     "devDependencies": {
         "@types/chrome": "^0.1.36",
+        "archiver": "^7.0.1",
         "typescript": "^5.9.3"
     }
 }
