--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-    "name": "twitch-improvement",
+    "name": "webext-twitch-improvements",
     "version": "1.0.0",
     "private": true,
-    "description": "Twitch Improvement browser extension",
+    "description": "Extension pour navigateur améliorant l'expérience utilisateur sur Twitch",
     "scripts": {
         "build": "node build.js",
         "watch": "node build.js watch",
